@@ -1,6 +1,7 @@
 2008-10-30  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/GParted_Core.cc: Added translator comments
+	  - Removed ellipses from status messages in set_devices()
 
 	* src/Win_GParted.cc: Added thread status message update to pulsebar
 
